--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,8 @@
     "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-auto-scroll": "^8.2.1",
+    "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
